# root_event_tree_cmake

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: DataModel.h  DataModelLinkDef.h
macros/: tree.C
src/: DataModel.cpp
